Troquei a cor do button e do hover

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Button</title>
+    <title>Formulário</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Botão</h1>
-    <button>Clique aqui</button>
-    <h2>Acessar um novo recurso</h2>
+   <form>
+    <input type="text" placeholder="Nome">
+    <input type="password" placeholder="senha">
+    <button type="submit">Entrar</button>
+   </form>
+
 </body>
 </html>
