troquei a cor do hover

--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <form>
-    <input type="text" placeholder="Nome">
-    <input type="password" placeholder="senha">
-    <button type="submit">Entrar</button>
-   </form>
+   <button>Clique aqui</button>
 
 </body>
 </html>
